refactor: :recycle: update for latest packages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "cv",
-	"version": "0.2.0",
+	"version": "0.3.0",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -17,40 +17,39 @@
 		"cspell": "cspell '**/*.md' --config cspell.json --wordsOnly"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.44.1",
-		"@sveltejs/adapter-auto": "^3.2.1",
-		"@sveltejs/kit": "^2.5.10",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@playwright/test": "^1.28.1",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.13",
-		"@testing-library/svelte": "^5.1.0",
-		"@types/eslint": "8.56.10",
-		"@typescript-eslint/eslint-plugin": "^7.12.0",
-		"@typescript-eslint/parser": "^7.12.0",
+		"@testing-library/svelte": "^5.2.0",
+		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
-		"cspell": "^8.8.4",
-		"daisyui": "^4.12.2",
+		"cspell": "^8.9.1",
+		"daisyui": "^4.12.10",
 		"date-fns": "^3.6.0",
-		"eslint": "^9.4.0",
+		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.39.0",
-		"fathom-client": "^3.6.0",
+		"eslint-plugin-svelte": "^2.36.0",
+		"fathom-client": "^3.7.0",
+		"globals": "^15.0.0",
 		"jsdom": "^24.1.0",
 		"mdsvex": "^0.11.2",
 		"postcss": "^8.4.38",
-		"postcss-load-config": "^6.0.1",
-		"prettier": "^3.3.1",
-		"prettier-plugin-svelte": "^3.2.4",
-		"prettier-plugin-tailwindcss": "^0.6.2",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.6.4",
 		"remark-external-links": "^9.0.1",
 		"svead": "^0.0.4",
 		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.8.0",
+		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.4",
 		"theme-change": "^2.5.0",
-		"tslib": "^2.6.3",
-		"typescript": "^5.4.5",
-		"vite": "^5.2.13",
-		"vitest": "^1.6.0"
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.0.0-alpha.20",
+		"vite": "^5.0.3",
+		"vitest": "^1.2.0"
 	},
 	"type": "module"
 }
