--- a/package.json
+++ b/package.json
@@ -17,39 +17,39 @@
 		"cspell": "cspell '**/*.md' --config cspell.json --wordsOnly"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.45.3",
-		"@sveltejs/adapter-auto": "^3.2.2",
-		"@sveltejs/kit": "^2.5.18",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
-		"@tailwindcss/typography": "^0.5.13",
-		"@testing-library/svelte": "^5.2.0",
-		"@types/eslint": "^9.6.0",
-		"autoprefixer": "^10.4.19",
-		"cspell": "^8.11.0",
+		"@playwright/test": "^1.46.1",
+		"@sveltejs/adapter-auto": "^3.2.4",
+		"@sveltejs/kit": "^2.5.25",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@tailwindcss/typography": "^0.5.15",
+		"@testing-library/svelte": "^5.2.1",
+		"@types/eslint": "^9.6.1",
+		"autoprefixer": "^10.4.20",
+		"cspell": "^8.14.2",
 		"daisyui": "^4.12.10",
 		"date-fns": "^3.6.0",
-		"eslint": "^9.7.0",
+		"eslint": "^9.9.1",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.43.0",
 		"fathom-client": "^3.7.2",
-		"globals": "^15.8.0",
-		"jsdom": "^24.1.1",
-		"mdsvex": "^0.11.2",
-		"postcss": "^8.4.39",
+		"globals": "^15.9.0",
+		"jsdom": "^25.0.0",
+		"mdsvex": "^0.12.3",
+		"postcss": "^8.4.41",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
-		"prettier-plugin-tailwindcss": "^0.6.5",
+		"prettier-plugin-tailwindcss": "^0.6.6",
 		"remark-external-links": "^9.0.1",
 		"svead": "^0.0.4",
 		"svelte": "^5.0.0-next.1",
-		"svelte-check": "^3.8.4",
-		"tailwindcss": "^3.4.6",
+		"svelte-check": "^3.8.6",
+		"tailwindcss": "^3.4.10",
 		"theme-change": "^2.5.0",
-		"tslib": "^2.6.3",
-		"typescript": "^5.5.3",
-		"typescript-eslint": "^8.0.0-alpha.20",
-		"vite": "^5.3.4",
-		"vitest": "^2.0.4"
+		"tslib": "^2.7.0",
+		"typescript": "^5.5.4",
+		"typescript-eslint": "^8.3.0",
+		"vite": "^5.4.2",
+		"vitest": "^2.0.5"
 	},
 	"type": "module"
 }
