--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.48.1",
-		"@sveltejs/adapter-auto": "^3.2.5",
-		"@sveltejs/kit": "^2.7.1",
+		"@sveltejs/adapter-auto": "^3.3.0",
+		"@sveltejs/kit": "^2.7.2",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@tailwindcss/typography": "^0.5.15",
 		"@testing-library/svelte": "^5.2.4",
@@ -28,9 +28,9 @@
 		"cspell": "^8.15.4",
 		"daisyui": "^4.12.13",
 		"date-fns": "^4.1.0",
-		"eslint": "^9.12.0",
+		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.45.1",
+		"eslint-plugin-svelte": "^2.46.0",
 		"fathom-client": "^3.7.2",
 		"globals": "^15.11.0",
 		"jsdom": "^25.0.1",
@@ -41,14 +41,14 @@
 		"prettier-plugin-tailwindcss": "^0.6.8",
 		"rehype-external-links": "^3.0.0",
 		"svead": "^0.0.4",
-		"svelte": "^5.0.0-next.1",
+		"svelte": "^5.0.5",
 		"svelte-check": "^4.0.5",
 		"tailwindcss": "^3.4.14",
 		"theme-change": "^2.5.0",
 		"tslib": "^2.8.0",
 		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.10.0",
-		"vite": "^5.4.9",
+		"typescript-eslint": "^8.11.0",
+		"vite": "^5.4.10",
 		"vitest": "^2.1.3"
 	},
 	"type": "module"
