--- a/.github/workflows/e2e-ci.yml
+++ b/.github/workflows/e2e-ci.yml
@@ -25,13 +25,13 @@ jobs:
           restore-keys: ${{ runner.os }}-pnpm-
       - uses: pnpm/action-setup@v4.0.0
         with:
-          version: 8.0.0
+          version: 9.0.0
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20.x
       - name: Install dependencies
-        run: pnpm i
+        run: pnpm install --no-frozen-lockfile
       - name: Install playwright browsers
         run: npx playwright install --with-deps
       - name: Test
