--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -23,12 +23,12 @@ jobs:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4.0.0
         with:
-          version: 8.0.0
+          version: 9.0.0
       - uses: actions/setup-node@v4
         with:
           node-version: 20.x
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
       - name: Build
         run: pnpm run build
         env:
