--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
 	"name": "cv",
+	"pnpm": {
+		"patchedDependencies": {
+			"cssstyle@4.2.1": "patches/cssstyle@4.2.1/fix-esm-import.patch"
+		}
+	},
 	"private": true,
 	"version": "0.5.0",
 	"type": "module",
