--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@tailwindcss/vite": "^4.0.6",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.7",
+		"cspell": "^8.17.3",
 		"daisyui": "5.0.0-beta.8",
 		"date-fns": "^4.1.0",
 		"eslint": "^9.20.1",
