chore: :arrow_up: update deps

--- a/package.json
+++ b/package.json
@@ -35,25 +35,25 @@
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.7",
 		"cspell": "^8.17.5",
-		"daisyui": "5.0.0-beta.8",
+		"daisyui": "5.0.0",
 		"date-fns": "^4.1.0",
 		"eslint": "^9.21.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^3.0.0",
+		"eslint-config-prettier": "^10.0.2",
+		"eslint-plugin-svelte": "^3.0.2",
 		"fathom-client": "^3.7.2",
 		"globals": "^16.0.0",
 		"jsdom": "^26.0.0",
 		"mdsvex": "^0.12.3",
-		"prettier": "^3.5.2",
+		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"rehype-external-links": "^3.0.0",
 		"svead": "^0.0.13",
-		"svelte": "^5.20.4",
+		"svelte": "^5.21.0",
 		"svelte-check": "^4.1.4",
 		"tailwindcss": "^4.0.9",
-		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.25.0",
+		"typescript": "^5.8.2",
+		"typescript-eslint": "^8.26.0",
 		"vite": "^6.2.0",
 		"vitest": "^3.0.7"
 	}
