refactor: update testing setup and dependencies

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -12,23 +12,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/cache@v4
+      - name: Checkout
+        uses: actions/checkout@v5
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
         with:
-          path: ~/.pnpm-store
-          key:
-            # prettier-ignore
-            ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4.1.0
+          run_install: false
+      - name: Install Node.js
+        uses: actions/setup-node@v4
         with:
-          version: 9.0.0
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 22.x
+          node-version: 22
+          cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install
+      - name: Install browsers
+        run: pnpm exec playwright install --with-deps
       - name: Build
         run: pnpm run build
         env:
