--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.1.2",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.12",
-		"@testing-library/jest-dom": "^6.7.0",
-		"@testing-library/svelte": "^5.2.8",
+		"@vitest/browser": "^3.2.4",
 		"cspell": "^9.2.0",
 		"daisyui": "5.0.50",
 		"date-fns": "^4.1.0",
@@ -43,8 +42,8 @@
 		"eslint-plugin-svelte": "^3.11.0",
 		"fathom-client": "^3.7.2",
 		"globals": "^16.3.0",
-		"jsdom": "^26.1.0",
 		"mdsvex": "^0.12.6",
+		"playwright": "^1.54.2",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
@@ -56,6 +55,7 @@
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.39.1",
 		"vite": "^7.1.2",
-		"vitest": "^3.2.4"
+		"vitest": "^3.2.4",
+		"vitest-browser-svelte": "^1.1.0"
 	}
 }
