--- a/.github/workflows/spelling-check.yml
+++ b/.github/workflows/spelling-check.yml
@@ -12,13 +12,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v5
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
         with:
-          node-version: 22.x
-      - uses: pnpm/action-setup@v4.1.0
+          run_install: false
+      - name: Install Node.js
+        uses: actions/setup-node@v4
         with:
-          version: 9.0.0
+          node-version: 22
+          cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install
       - name: Check spelling
