--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"private": true,
 	"version": "0.5.0",
 	"type": "module",
+	"packageManager": "pnpm@10.8.1",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
