--- a/.github/workflows/e2e-ci.yml
+++ b/.github/workflows/e2e-ci.yml
@@ -10,6 +10,10 @@ jobs:
   tests-e2e:
     name: Run end-to-end tests
     runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.54.2-noble
+      options: --user 1001
+    timeout-minutes: 15
 
     steps:
       - name: Checkout
@@ -25,8 +29,6 @@ jobs:
           cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install
-      - name: Install playwright browsers
-        run: pnpm exec playwright install --with-deps
       - name: Build
         run: pnpm run build
         env:
