--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"private": true,
 	"version": "0.5.0",
 	"type": "module",
-	"packageManager": "pnpm@10.18.2",
+	"packageManager": "pnpm@10.24.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -26,37 +26,37 @@
 		"cspell": "cspell '**/*.md' --config cspell.json --wordsOnly"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.4.0",
-		"@eslint/js": "^9.37.0",
-		"@playwright/test": "^1.56.0",
+		"@eslint/compat": "^2.0.0",
+		"@eslint/js": "^9.39.1",
+		"@playwright/test": "^1.57.0",
 		"@sveltejs/adapter-cloudflare": "^7.2.4",
-		"@sveltejs/kit": "^2.46.4",
+		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/typography": "^0.5.19",
-		"@tailwindcss/vite": "^4.1.14",
-		"@vitest/browser": "^3.2.4",
-		"cspell": "^9.2.1",
-		"daisyui": "5.5.3",
+		"@tailwindcss/vite": "^4.1.17",
+		"@vitest/browser-playwright": "^4.0.15",
+		"cspell": "^9.4.0",
+		"daisyui": "5.5.8",
 		"date-fns": "^4.1.0",
-		"eslint": "^9.37.0",
+		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.12.4",
+		"eslint-plugin-svelte": "^3.13.0",
 		"fathom-client": "^3.7.2",
-		"globals": "^16.4.0",
+		"globals": "^16.5.0",
 		"mdsvex": "^0.12.6",
-		"playwright": "^1.56.0",
-		"prettier": "^3.6.2",
+		"playwright": "^1.57.0",
+		"prettier": "^3.7.4",
 		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.6.14",
+		"prettier-plugin-tailwindcss": "^0.7.2",
 		"rehype-external-links": "^3.0.0",
 		"svead": "^0.0.15",
-		"svelte": "^5.39.11",
-		"svelte-check": "^4.3.3",
-		"tailwindcss": "^4.1.14",
+		"svelte": "^5.45.5",
+		"svelte-check": "^4.3.4",
+		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.46.0",
-		"vite": "^7.1.9",
-		"vitest": "^3.2.4",
-		"vitest-browser-svelte": "^1.1.0"
+		"typescript-eslint": "^8.48.1",
+		"vite": "^7.2.6",
+		"vitest": "^4.0.15",
+		"vitest-browser-svelte": "^2.0.1"
 	}
 }
